# polychat-druid-gui

./: Cargo.toml  README.md
src/: chat_ui.rs  core_interface.rs  main.rs  plugin_ui.rs  settings_ui.rs
src/data/: app_state_data.rs  mod.rs  plugin_item_data.rs
src/helper/: helper_functions.rs  layout_settings.rs  mod.rs
src/widgets/: chat_window_widget.rs  mod.rs  plugin_item_widget.rs  single_message_widget.rs  timeline_item_widget.rs
